Changed style of the login, logout, and reset password screens.
git-svn-id: https://get-simple-cms.googlecode.com/svn/trunk@303 c6e34258-837a-11de-9f42-234e1f44043b

--- a/theme/Innovation/assets/css/style.css
+++ b/theme/Innovation/assets/css/style.css
@@ -65,6 +65,7 @@ header #logo {
 	top:20px;
 	left:0;
 	font-size:35px;
+	white-space:nowrap;
 	color:#fff;
 	font-family: 'Yanone Kaffeesatz', arial, helvetica, sans-serif;
 	text-transform:uppercase;
@@ -321,3 +322,8 @@ footer a:hover, footer a:focus {
 	color:#555;
 	text-decoration:underline;
 }
+
+
+#index .header {display:none;}
+#index #maincontent {text-align:center;}
+#index #maincontent #main {width:300px;}
