CKEditor style updates
git-svn-id: https://get-simple-cms.googlecode.com/svn/trunk@518 c6e34258-837a-11de-9f42-234e1f44043b

--- a/admin/template/js/ckeditor/skins/getsimple/dialog.css
+++ b/admin/template/js/ckeditor/skins/getsimple/dialog.css
@@ -9,8 +9,8 @@ body .cke_dialog {
 
 .cke_skin_getsimple .cke_dialog_body {
 	z-index:1;
-	border:solid 2px #666;
-	padding:10px;
+	border:1px solid #333;
+	padding:20px;
 	background-color:#fff;
 	position:relative;
 	_position:static;
