Updates to Codemirror Template editing
o - current line highlighting
o - search and replace functionality
o - code folding, click the gutter or CTRL-Q to foldcode.js
o - Full screen editing, press F11 or (ESC for OSX / Safari)  

git-svn-id: https://get-simple-cms.googlecode.com/svn/trunk@602 c6e34258-837a-11de-9f42-234e1f44043b

--- a/admin/template/js/codemirror/lib/codemirror.css
+++ b/admin/template/js/codemirror/lib/codemirror.css
@@ -91,3 +91,22 @@ span.CodeMirror-selected {
 #codetext{
 	padding-bottom:20px;
 }
+
+.activeline {
+background: #F0FCFF !important;
+}
+
+.fullscreen {
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 9999;
+    margin: 0;
+    padding: 0;
+    border: 0px solid #BBBBBB;
+    opacity: 1;
+    background:white;
+}
