putting border back on theme editor.
git-svn-id: https://get-simple-cms.googlecode.com/svn/trunk@711 c6e34258-837a-11de-9f42-234e1f44043b

--- a/admin/template/js/codemirror/lib/codemirror.css
+++ b/admin/template/js/codemirror/lib/codemirror.css
@@ -2,6 +2,11 @@
   line-height: 1em;
   font-family: monospace;
   padding-bottom:20px;
+  line-height: 1em;
+	font-family: monospace;
+	margin-bottom: 15px;
+	height: 660px;
+	border: 1px solid #AAA;
 }
 
 .CodeMirror-scroll {
