--- a/admin/template/js/codemirror/theme/default.css
+++ b/admin/template/js/codemirror/theme/default.css
@@ -17,3 +17,7 @@
 .cm-s-default span.cm-bracket {color: #cc7;}
 .cm-s-default span.cm-tag {color: #170;}
 .cm-s-default span.cm-attribute {color: #00c;}
+.cm-s-default.CodeMirror-gutter {
+  background-color: #f7f7f7;
+  border-right: 1px solid #eee;
+}
