--- a/admin/template/js/nestable/jquery.nestable.css
+++ b/admin/template/js/nestable/jquery.nestable.css
@@ -104,7 +104,8 @@
     margin: 5px 0;
     padding: 0;
     min-height: 30px;
-    background: #f2fbff;
+    /*background: #f2fbff;*/
+    background: #FFFFD5;
     border: 1px dashed #b6bcbf;
     box-sizing: border-box;
     -moz-box-sizing: border-box;
