--- a/admin/template/js/codemirror/theme/solarized.css
+++ b/admin/template/js/codemirror/theme/solarized.css
@@ -32,7 +32,7 @@ http://ethanschoonover.com/solarized/img/solarized-palette.png
   color-profile: sRGB;
   rendering-intent: auto;
 }
-.cm-s-solarized.cm-s-dark {
+.cm-s-solarized.cm-s-dark.CodeMirror {
   color: #839496;
   background-color: #002b36;
   text-shadow: #002b36 0 1px;
